--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,15 @@
 .App > div {
   margin-right: 50px;
 }
+.todolist {
+  border: 2px solid hotpink;
+  border-radius: 5px;
+  padding: 20px;
+  background-color: darkseagreen;
+}
+.todolist-empty {
+  border: 2px solid hotpink;
+  border-radius: 5px;
+  padding: 20px;
+  background-color: darksalmon;
+}
