--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,25 @@
   padding: 20px;
   background-color: darksalmon;
 }
+
+.task {
+  font-weight: bold;
+
+}
+
+.task-done {
+  font-weight: normal;
+  text-decoration: line-through;
+}
+
+.btn-active {
+  background-color: cornflowerblue;
+  color: white;
+  border: 2px solid cornflowerblue;
+  border-radius: 3px;
+}
+
+.input-error {
+  outline: none;
+  border: 4px solid hotpink;
+}
